change to yellow

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 */
 p{ line-height: 1em; }
 h1, h2, h3, h4{
-    color: orange;
+    color: yellow;
 	font-weight: normal;
 	line-height: 1.1em;
 	margin: 0 0 .5em 0;
@@ -12,7 +12,7 @@ h1{ font-size: 1.7em; }
 h2{ font-size: 1.5em; }
 a{
 	color: black;
-	text-decoration: none;
+	text-decoration: none;	
 }
 	a:hover,
 	a:active{ text-decoration: underline; }
